Complete and open for suggestions
Check it out!

--- a/simple.html
+++ b/simple.html
@@ -3,9 +3,9 @@
 
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />	
-	<title>Andrew Laron - an introduction</title>
+	<title>AnimoLibro</title>
 
-	<link href='http://fonts.googleapis.com/css?family=Patua+One' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=Oswald' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" type="text/css" href="jquery.fullPage.css" />
 	<link rel="stylesheet" type="text/css" href="simple.css" />
 
@@ -24,8 +24,8 @@
 	<script type="text/javascript">
 		$(document).ready(function() {
 			var pepe = $.fn.fullpage({
-				slidesColor: ['red', 'darkorange', 'yellow', 'green', '#000099','indigo','purple'],
-				anchors: ['firstPage', 'secondPage', '3rdPage', '4thpage', '5thpage','6thpage','lastPage'],
+				slidesColor: ['green', 'white', 'white'],
+				anchors: ['firstPage', 'secondPage', '3rdPage', '4thPage', '5thPage'],
 				menu: '#menu',
 				loopTop: true,
 				loopBottom: true
@@ -38,97 +38,26 @@
 <body>
 
 <ul id="menu">
-	<li data-menuanchor="firstPage"><a href="#firstPage"><h3>Andrew Laron</h3></a></li>
-	<li data-menuanchor="secondPage"><a href="#secondPage"><img src="icons/aboutme.png"></img>About Me</a></li>
-	<li data-menuanchor="3rdPage"><a href="#3rdPage"><img src="icons/education.png"></img>Education</a></li>
-	<li data-menuanchor="4thpage"><a href="#4thpage"><img src="icons/co-curriculars.png"></img>Co-curriculars</a></li>
-	<li data-menuanchor="5thpage"><a href="#5thpage"><img src="icons/projects.png"></img>Projects</a></li>
-	<li data-menuanchor="5thpage"><a href="#6thpage"><img src="icons/seminars.png"></img>Seminars Attended</a></li>
-	<li data-menuanchor="lastPage"><a href="#lastPage"><img src="icons/research.png"></img>Research Papers</a></li>
+	<li data-menuanchor="firstPage"><a href="#firstPage"><h3>AnimoLibro</h3></a></li>
+	<li data-menuanchor="secondPage"><a href="#secondPage"><img src="icons/book.png"></img>About AnimoLibro</a></li>
+	<li data-menuanchor="3rdPage"><a href="#3rdPage"><img src="icons/buy.png"></img>Buy Books</a></li>
+	<li data-menuanchor="4thPage"><a href="#4thPage"><img src="icons/sell.png"></img>Sell Books</a></li>
+	<li data-menuanchor="5thPage"><a href="#5thPage"></a></li>
 </ul>
 
-<div class="section active" id="section0"><h1>Andrew Laron</h1></div>
+<div class="section active" id="section0"><h1>Animo&#9734Libro</h1></div>
 <div class="section" id="section1">
-    <div class="slide slide0"><h1>About Me</h1></div> <!--personal background-->
-    <div class="slide" id="slide1-1"><h1>Background</h1><p>Born on June 20, 1994 in Erie, Pennsylvania, U.S.A. Settled in the Philippines in 2001. Goal-oriented and critical.</p></div> <!--school/honors history-->
-    <div class="slide"><h1>Languages</h1><h2>(natural)</h2><ul><li>English (native)</li><li>Tagalog (conversant)</li><li>Mandarin (conversant)</li><li>Hokkien (conversant)</li></ul></div><!--co-curriculars: GameLab (Pulse), hackathon (Mine-Z)-->
-	    <div class="slide"><h1>Languages</h1><h2>(computer)</h2><ul><li>Java</li><li>C#</li><li>C</li><li>Javascript</li><li>SQL</li><li>HTML5</li><li>CSS3</li><li>PHP</li></ul></div><!--ADVANDB research paper-->
-    <div class="slide"><h1>Interests</h1><ul><li>Playing music</li><li>Game development</li><li>Studying foreign languages</li></ul></div><!--ADVANDB research paper-->
-	
+    <div class="slide slide0"><h1>About AnimoLibro</h1><img src="icons/front.png"></img><h2>a platform for De La Salle University students where you can...</h2></div> <!--personal background-->
 </div>
 <div class="section" id="section2">
-	<div class="slide"><h1>Education</h1></div>
-	<div class="slide" id="slide2-1">
-		<h1>High School</h1>
-		<h2>St.Stephen's High School<br>(2011)</h2>
-		<ul>
-			<li><h3>School Honors:</h3></li>
-			<li>Honorable Mention (2011)</li>
-			<li>In/Off-School Service Award (2010, 2011)</li>
-		</ul>
-		<ul>
-			<li><h3>External Awards:</h3></li>
-			<li>Mercury Drug Corporation Excellence in Science Award (2011)</li>
-			<li>DOST - Youth Excellence in Science Award (2010)</li>
-		</ul>
-	</div>
-	<div class="slide" id="slide2-2">
-		<h1>University</h1>
-		<h2>De La Salle University<br>(2015)</h2>
-		<ul>
-			<li><h3>Dean's List:</h3></li>
-			<li>SY 2011-2012</li>
-			<li>SY 2013-2014</li>
-		</ul>
-	</div>
+	<div class="slide"><h1>Buy Books</h1><img src="icons/buypage.png"></img><h2>You don't have to wait in lines!!!</h2></div>
 </div>
 
 <div class="section" id="section3">
-	<div class="slide"><h1>Co-curriculars</h1></div>
-	<div class="slide">
-		<h1>DLSU Game Development Laboratory</h1>
-		<h2>(Developer)</h2>
-		<p>Developed a game for Windows Phone, "Pulse", published in the Windows App Store; provided proofreading services.</p>
-	</div>
+	<div class="slide"><h1>Sell Books</h1><img src="icons/sellpage.png"></img><h2>Just a registration away...</h2></div>
 </div>
-
 <div class="section" id="section4">
-	<div class="slide"><h1>Projects</h1></div>
-	<div class="slide">
-		<h1>Pulse</h1>
-		<h2>(2012)</h2>
-		<p>A simple game of catching and avoiding things. Published in the Windows Phone App Store.
-	</div>
-		<div class="slide">
-		<h1>Mine-Z</h1>
-		<h2>(2013)</h2>
-		<p>Windows Phone Game. Produced in under 24 hours for the Windows Phone 8 Hacker Cup.
-	</div>
+	<div class="slide"><h1>Check It Out!</h1><a href = "http://localhost/animolibro/portal.html"><img src="icons/Wormhole.gif"></img></a><h3>Andrew Laron</h3><h3>Ronald Lim</h3><h3>Charles Malcaba</h3>
 </div>
-
-<div class="section" id="section5">
-	<div class="slide"><h1>Seminars attended</h1></div>
-	<div class="slide">
-		<h1>Microsoft Web Development Seminar</h1>
-		<h2>(Microsoft Philippines, 2011)</h2>
-	</div>
-	<div class="slide">
-		<h1>Drupal Campus Talk</h1>
-		<h2>(Drupal Pilipinas, 2012)</h2>
-	</div>
-	<div class="slide">
-		<h1>IBM-Devcon Technopreneurship Talks</h1>
-		<h2>(IBM / Developers Connect Philippines, 2011)</h2>
-	</div>
-</div>
-<div class="section" id="section6">
-	<div class="slide"><h1>Research Papers</h1></div>
-	<div class="slide">
-		<h1>Frequency Mapping of Crimes in Metro Manila Based on Text Mining of Twitter</h1>
-		<h2>(De Leon, Laron, Lladoc and Elayda, 2013)</h2>
-		<p>Developed a proof of concept for producing a heat map of crimes in different cities of Metro Manila, based on dictionary-based text mining of tweets from local news agencies.</p>
-	</div>
-</div>
-
 </body>
 </html>
