Increased scroll speed.

--- a/simple.html
+++ b/simple.html
@@ -31,7 +31,7 @@
 				navigationPosition: 'right',
 				navigationTooltips: ['Home', 'About', 'Buy Books', 'Sell Books', 'Check It Out'],
 				slidesNavigation: true	,
-				autoscrolling: false
+				scrollingSpeed: 300
 			});
 			$('.section').each(function() {
 
