--- a/simple.html
+++ b/simple.html
@@ -42,7 +42,7 @@
 <body>
 
 <ul id="menu">
-	<li data-menuanchor="firstPage"><a href="#firstPage"><h3>AnimoLibro</h3></a></li>
+	<li data-menuanchor="firstPage"><a href="#firstPage"><h3>Animo&#9734Libro</h3></a></li>
 	<li data-menuanchor="secondPage"><a href="#secondPage">About AnimoLibro</a></li>
 	<li data-menuanchor="3rdPage"><a href="#3rdPage">Buy Books</a></li>
 	<li data-menuanchor="4thPage"><a href="#4thPage">Sell Books</a></li>
