--- a/simple.html
+++ b/simple.html
@@ -63,7 +63,7 @@
 	<div class="slide"><h2>Track Your Ads</h2><img src="images/userprofile.png"></img><p>See if anyone wants to buy your book at a glance.</p></div>
 </div>
 <div class="section" id="section4">
-<h1>Check It Out!</h1><h3> Click <a class="inline-link" href = "http://localhost/animolibro/portal.html">here</a> to try AnimoLibro for yourself.<!--img src="icons/Wormhole.gif"></img--></h3><!--h3>Andrew Laron</h3><h3>Ronald Lim</h3><h3>Charles Malcaba</h3-->
+<h1>Check It Out!</h1><h3> <a class="inline-link" href = "http://localhost/animolibro/portal.html">Try AnimoLibro for yourself.</a> <!--img src="icons/Wormhole.gif"></img--></h3><!--h3>Andrew Laron</h3><h3>Ronald Lim</h3><h3>Charles Malcaba</h3-->
 </div>
 </body>
 </html>
