Changed more stuff

--- a/simple.html
+++ b/simple.html
@@ -55,12 +55,12 @@
 </div>
 <div class="section" id="section2">
 	<div class="slide"><h2>Find Books</h2><img src="images/buy.png"></img><p>Search for books you need using whatever keywords you like.</p></div>
-	<div class="slide"><h2>Customer's Choice</h2><img src="images/booksellers.png"></img><p>Know who's selling the book you need.<br> So you know just what your options are.</p></div>
+	<div class="slide"><h2>Customer's Choice</h2><img src="images/booksellers.png"></img><p>Know who's selling the book you need.<!--br> So you know just what your options are.<--></p></div>
 </div>
 
 <div class="section" id="section3">
 	<div class="slide"><h2>Sell Books</h2><img src="icons/sellpage.png"></img><p>Put your old books up for sale with a guaranteed market.</p></div>
-	<div class="slide"><h2>Track Your Ads</h2><img src="images/userprofile.png"></img><p>See if anyone wants to buy your book at a glance.</p></div>
+	<div class="slide"><h2>Track Your Ads</h2><img src="images/userprofile.png"></img><p>See if anyone wants to buy your books at a glance.</p></div>
 </div>
 <div class="section" id="section4">
 <h1>Check It Out!</h1><h3> <a class="inline-link" href = "http://localhost/animolibro/portal.html">Try AnimoLibro for yourself.</a> <!--img src="icons/Wormhole.gif"></img--></h3><!--h3>Andrew Laron</h3><h3>Ronald Lim</h3><h3>Charles Malcaba</h3-->
